# time-tracker

./: LICENSE  README.md  environment.yml  install-time-tracker  pyproject.toml  time-tracker-agent.py  time-tracker.py  time_tracker.py  uninstall-time-tracker  workspace.code-workspace
.github/workflows/: test.yml
src/time_tracker/: __init__.py  agent.py
tests/: day_results_test.py  filter_test.py  log_parsing_test.py  span_test.py
typings/: AppKit.pyi  Foundation.pyi  PyObjCTools.pyi
