[tool.poetry]
name = "time-tracker"
version = "0.2.0a1"
description = "Utilities to track my working hours"
authors = ["Martina Oefelein"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
time_tracker = 'time_tracker:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
