[project]
name = "time_tracker"
version = "0.2.0a1"
description = "Utility to track my working hours"
readme = "README.md"
authors = [
    { name = "Martina Oefelein", email = "Martina@Oefelein.de" }
]
requires-python = ">=3.13"
dependencies = [
    "pyobjc-core>=11.0",
    "pyobjc-framework-cocoa>=11.0",
]

[project.scripts]
time_tracker = "time_tracker:main"
time_tracker_agent = "time_tracker.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"